@@ -6,8 +6,9 @@ os:
 
 julia:
   - 0.4
-  - 0.5
-# - nightly  ## getting too many warnings
+  - release
+  allow_failures:
+  - nightly  ## getting too many warnings
 
 notifications:
   email: false
