@@ -1,4 +1,11 @@
-using Base.Test, Knet
+if VERSION >= v"0.5.0-dev+7720"
+    using Base.Test
+else
+    using BaseTestNext
+    const Test = BaseTestNext
+end
+
+using Knet
 
 @testset "distributions" begin
     @test isa(gaussian(10),Array)
