@@ -2,6 +2,11 @@
 
 	* TODO8:
 
+	# Latest master failing on Julia 0.4 (convtest) and nightly distros.
+	# permutedims ambiguity in AutoGrad in Julia 0.4.
+	# Contents does not show on README.md, @ref doesn't work etc.
+	# TonyKelman on Compat: If you use Compat in your tests, it needs to be in test/REQUIRE or REQUIRE.
+	# TonyKelman on removing nightly from travis: you can make this an allowed failure so it'll run but won't make your status red
 	# AutoGrad: run all tests with KnetArrays
 	# add KnetArray{Float32}(3) type init like Array and deprecate the other.
 	# fix unclear docs for optimization, tutorial example? better yet, impl improved update interface.
